Lista non ordinata

--- a/style.css
+++ b/style.css
@@ -11,3 +11,46 @@
     padding-top: 40px;
     padding-left: 5px;
 }
+
+#titolo{
+    font-size: 50px;
+    margin-bottom: 0px;
+}
+
+header > p{
+    margin-top: 0px;
+    color: gray; 
+}
+
+#autore{
+    color: #2b9cda;
+}
+
+#foto-1{
+    width: 650px;
+    height: auto;
+}
+
+#foto-2{
+    width: 555px;
+    height: auto;
+}
+
+#fonti-foto{
+    margin-top: 0px;
+    font-size: 12px;
+}
+
+main > p{
+    font-size: 19px;
+}
+
+.sottolineatura{
+    background-color: yellow;
+}
+
+main > ul{
+    margin-top: 30px;
+    padding-left: 15px;
+    font-size: 19px;
+}
