--- a/style.css
+++ b/style.css
@@ -78,5 +78,30 @@ table{
 }
 
 .riga-2{
-    background-color: rgb(144, 212, 255;
+    background-color: rgb(144, 212, 255);
+}
+
+footer > p{
+    color: gray;
+    font-weight: bolder;
+}
+
+#footer-1{
+    background-image: url(img/monitor.jpg);
+    height: 200px;
+    width: auto;
+    background-repeat: no-repeat;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+}
+
+#footer-2{
+    background-image: url(img/graph.jpg);
+    height: 200px;
+    width: auto;
+    background-repeat: no-repeat;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
 }
